# calc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO
apps/: CMakeLists.txt
apps/quest-template/: CMakeLists.txt  appconfig.h.in  main.cpp  quest.cpp  quest.hpp
apps/quest01/: CMakeLists.txt  appconfig.h.in  main.cpp  matmul.cpp  matmul.hpp  matrix.hpp  matrix_impl.hpp  quest.cpp  quest.hpp
apps/quest01-1/: CMakeLists.txt  main.cpp  matmul.cpp  matmul.hpp  quest.cpp  quest.hpp
apps/quest01-2/: CMakeLists.txt  matmul.cpp  matmul.hpp  quest.cpp  quest.hpp
apps/quest02/: CMakeLists.txt  interpolate.cpp  interpolate.hpp  quest.cpp  quest.hpp
apps/quest03/: CMakeLists.txt  dense_linear_solve.cpp  dense_linear_solve.hpp  quest.cpp  quest.hpp
apps/quest04/: CMakeLists.txt  dense_linear_solve.cpp  dense_linear_solve.hpp  quest.cpp  quest.hpp
apps/quest05/: CMakeLists.txt  approximate.cpp  approximate.hpp  quest.cpp  quest.hpp
apps/quest06/: CMakeLists.txt  newton.cpp  newton.hpp  quest.cpp  quest.hpp
cmake/: FindBLAS.cmake  FindCilk.cmake  FindForceInlineKeywordCXX.cmake  FindGSL.cmake  FindMTL4.cmake  FindOpenBlas.cmake  FindOpenMP_Fortran.cmake  FindQuadmath.cmake  FindRestrictKeywordCXX.cmake  FindStandardMathLibrary.cmake  Findtcmalloc.cmake  GetHostCacheLineSize.cmake  SetCompileFlag.cmake  SetFortranFlags.cmake
cmake/test/: forceinline.cpp  host_cache_line_size.c  restrict.cpp
include/: CMakeLists.txt  config.h.in  stdafx.h.in
src/: CMakeLists.txt
src/calcapp/: CMakeLists.txt  app.cpp  app.hpp  cli.hpp  cli_log.cpp  cli_opt.cpp  exception.hpp  infile.cpp  infile.hpp  io.cpp  io.hpp  log.cpp  log.hpp  options.cpp  options.hpp  outfile.cpp  outfile.hpp  parallel_progress.hpp  progress.hpp  system.cpp  system.hpp
src/calcapp/math/: approximant.hpp  approximant_impl.hpp  dense_linear_solver.hpp  dense_linear_solver_func.hpp  interpolant.hpp  interpolant_impl.hpp  matrix.hpp  matrix_impl.hpp
src/libnumeric/: blas_impl.hpp  cache.hpp  parallel.hpp  real.hpp
src/numeric/: CMakeLists.txt  approximation.hpp  approximation_spline_impl.hpp  blas.cpp  blas.hpp  blas_banded_impl.hpp  blas_block_impl.hpp  blas_impl.cpp  blas_impl.hpp  cache.hpp  complex.hpp  expand_traits.hpp  interpolation.hpp  interpolation_lagrange_impl.hpp  lapack.hpp  lapack_impl.hpp  newton_solver.hpp  parallel.cpp  parallel.hpp  parallel_tbb.hpp  real.hpp
test/apps/quest01-1/square-ones/: gen_plot.sh  gen_square_matrix.py  gen_square_matrix.sh  gen_table.sh  run_tests.sh
test/apps/quest01-2/tridiag-ones/: gen_banded_matrix.sh
test/apps/quest02/abs/: gen_che.py  gen_che_weights.py
test/apps/quest04/ones/: gen_square_matrix.py
test/apps/quest05/abs/: gen_che.py  gen_uni.py
test/apps/quest05/absplussin/: gen_che.py  gen_uni.py
test/apps/quest05/gauss/: gen_che.py  gen_uni.py
test/apps/quest05/parabola/: gen_che.py  gen_uni.py
test/apps/quest05/sin/: gen_che.py  gen_uni.py
